# tiny_python_projects

./: .gitignore  LICENSE  Makefile  OUTLINE.md  README.md  TITLE.md  TravelFormGUI.py  all_test.sh  book.md  dailygit  imdb.py  outline.md  pyproject.toml  python-games.md  requirements.txt  toc  toc.txt
01_hello/: README.md  hello.py  hello01_print.py  hello02_comment.py  hello04_argparse.py  hello04_argparse_positional.py  hello05_argparse_option.py  hello05_greet_function.py  hello06_main_function.py  hello07_get_args.py  hello07_using_test.py  hello08_formatted.py  hello09.py  hello09_validating_argv.py  hello10_help_flag.py  hello11.py  hello11_argparse.py  hello12_get_args.py  hello13_formatting.py  hello14_default_formatter.py  hello2.py  test.py
02_argparse/: README.md
02_crowsnest/: Makefile  README.md  all_test.sh  crowsnest.py  crowsnest_capital.py  solution.py  test.py  test_capital.py
03_crowsnest/: solution.py
03_picnic/: README.md  all_test.sh  picnic.py  test.py
04_jump_the_five/: README.md  all_test.sh  jump.py  solution1.py  solution3.py  test.py
04_picnic/: README.md
05_howler/: Makefile  README.md  all_test.sh  howler.py  howler_no-multifile.py  solution1.py  solution2.py  test.py  test_no_multifile.py
05_jump_the_five/: README.md  solution.py  solution2.py  solution4.py
06_wc/: README.md  all_test.sh  cat.py  cat_test.py  head.py  head_test.py  solution.py  tac.py  tac_test.py  tail.py  tail_test.py  test.py  wc.py
07_gashlycrumb/: README.md  addressbook.json  addressbook.py  addressbook_test.py  all_test.sh  alternate.json  (+10 more)
(+854 files in other folders)
